--- a/script.css
+++ b/script.css
@@ -3,6 +3,9 @@ body {
   padding: 0;
   background-color: #000;
   overflow: hidden; 
+  overflow-x: hidden;
+  width: 100%;
+  max-width: 100%;
 }
 
 .backvideo {
@@ -17,16 +20,21 @@ body {
   transition: 0.5s;
 }
 
+#hcontent{
+  max-width: 100vw;
+}
+
 #hlogo {
   position: absolute;
   top: 0;
-  width: 100%;
+  max-width: calc(100% - 20px);
   left: 0;
   margin: 10px;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   z-index: 20; 
+  overflow: hidden; 
 }
 
 #hlogo > a > img {
@@ -38,31 +46,38 @@ body {
   position: absolute;
   left: 0;
   margin: 5px;
-  width: 100%;
+  width: calc(100% - 10px);
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
   z-index: 10;
   top: 15px;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 #htext > a > p {
-  margin: 0 30px; 
+  margin: 0 20px; 
   font-family: 'Poppins';
   font-size: 1.25em;
   font-weight: 120;
   color: white;
   text-align: center;
+  overflow-x: hidden;
 }
 
 @media screen and (min-width: 601px) and (max-width:900px) {
+  body{
+    overflow: hidden;
+  }
   #htext > a> p {
     font-size: 1.2em;
   }
 }
 
 @media screen and (max-width: 600px) { 
+  body{
+    overflow: hidden;
+  }
   #hlogo > a > img{
     width : 15vh;
   }
@@ -76,6 +91,9 @@ body {
 }
 
 @media screen and (max-width: 550px) {
+  body{
+    overflow: hidden;
+  }
   #htext > a > p {
     position: relative;
     left: 10px;
@@ -83,7 +101,9 @@ body {
 }
 
 @media screen and (max-width: 400px){
-
+  body{
+    overflow: hidden;
+  }
   #htext > a > p {
     position: relative;
     left: 20px;
